--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ sysinfo.txt
 crashlytics-build.properties
 
 .DS_Store
+.idea/.idea.Mobile-Project/.idea/encodings.xml
+.idea/.idea.Mobile-Project/.idea/misc.xml
+*.iml
